MacViews: Underline composition text.

This CL adds a black underline to the active composition text for textfields on
MacViews. This makes the behavior of IME on MacViews' textfields, the same as
that on other Views platforms.

BUG=612675
TEST=Enable chrome://flags/#mac-views-native-dialogs. Go to system settings and
change Input Source to Katakana(Japanese). Open Bookmark bubble. In the Name:
textfield, press "kv" and then press Enter. Press "mq". Ensure mq is underlined.

Review-Url: https://codereview.chromium.org/2218773002
Cr-Commit-Position: refs/heads/master@{#410007}

Former-commit-id: 2ccee9b698c96a58655cf5ff7e07048b3fb22962